fix: empty scrollbar in all windows browsers edge/FF/chrome/opera

--- a/styles/components/filters.scss
+++ b/styles/components/filters.scss
@@ -3,10 +3,18 @@ $width: 340px;
 .filters {
   z-index: 3;
 
-  @media(min-width: 1300px) {
+  @media (min-width: 1300px) {
+    .content-cols:not(.is-filters-hide) & {
+      border-right: 1px solid #ccc;
+    }
+
     & + .content-text {
       min-height: calc(100vh - 81px) !important;
       padding-top: 16px;
+
+      center > .flex {
+        justify-content: center;
+      }
     }
   }
 
@@ -28,7 +36,7 @@ $width: 340px;
     z-index: 3;
     pointer-events: none;
 
-    @media(max-width: 1300px) {
+    @media (max-width: 1300px) {
       top: 12px;
     }
 
@@ -40,7 +48,7 @@ $width: 340px;
       align-items: center;
       gap: 15px;
 
-      @media(max-width: 1300px) {
+      @media (max-width: 1300px) {
         gap: 8px;
         margin-bottom: 8px;
       }
@@ -48,7 +56,7 @@ $width: 340px;
   }
 
   &__box {
-    @media(min-width: 1300px) {
+    @media (min-width: 1300px) {
       position: sticky;
       top: 81px;
       padding: 20px 15px;
@@ -57,31 +65,20 @@ $width: 340px;
 
       .content-cols:not(.is-filters-hide) & {
         overflow-y: scroll;
-        scrollbar-width: thin;
-        scrollbar-color: var(--accent-icon) #fff;
 
         &::-webkit-scrollbar {
-          width: 8px;
-        }
-
-        &::-webkit-scrollbar-track {
-          background: #fff;
-        }
-
-        &::-webkit-scrollbar-thumb {
-          background-color: var(--accent-icon);
-          border-radius: 0px;
+          display: none;
         }
       }
     }
 
-    @media(max-width: 1300px) {
+    @media (max-width: 1300px) {
       height: 100%;
     }
   }
 
   .content-cols.is-filters-hide & {
-    @media(min-width: 1300px) {
+    @media (min-width: 1300px) {
       width: 0;
     }
   }
@@ -97,7 +94,7 @@ $width: 340px;
       color: #fff;
     }
 
-    @media(min-width: 1300px) {
+    @media (min-width: 1300px) {
       display: none;
     }
   }
@@ -106,12 +103,13 @@ $width: 340px;
     margin: 64px 0 25px 0;
     width: 100%;
 
-    @media(max-width: 440px) {
+    @media (max-width: 440px) {
       margin: 55px 0 15px 0;
     }
 
-    th, td {
-      @media(max-width: 1550px) {
+    th,
+    td {
+      @media (max-width: 1550px) {
         padding: 5px;
         font-size: 12px;
       }
@@ -127,7 +125,7 @@ $width: 340px;
     align-items: center;
     justify-content: space-between;
 
-    @media(min-width: 1300px) {
+    @media (min-width: 1300px) {
       height: 38px;
     }
 
@@ -138,12 +136,12 @@ $width: 340px;
     }
 
     .filter-header-title {
-      @media(min-width: 1300px) {
+      @media (min-width: 1300px) {
         margin-left: 55px;
         width: calc(100% - 140px);
         text-align: center;
       }
-      @media(max-width: 1300px) {
+      @media (max-width: 1300px) {
         font-size: 16px;
         margin-left: -50px;
       }
@@ -163,17 +161,17 @@ $width: 340px;
     }
 
     .filters-body > * {
-      @media(min-width: 1300px) {
+      @media (min-width: 1300px) {
         margin-bottom: 20px;
       }
 
-      @media(max-width: 1300px) {
+      @media (max-width: 1300px) {
         max-width: 620px;
         margin: 0 auto 20px;
       }
     }
 
-    @media(min-width: 1300px) {
+    @media (min-width: 1300px) {
       .content-cols.is-filters-hide & {
         display: none;
       }
@@ -215,12 +213,12 @@ $width: 340px;
     cursor: pointer;
     color: var(--background-block);
 
-    @media(min-width: 440px) {
+    @media (min-width: 440px) {
       width: 38px;
       height: 38px;
     }
 
-    @media(max-width: 440px) {
+    @media (max-width: 440px) {
       padding: 5px;
     }
 
